Added test classes for possible jack development.